# rtos-trace

./: CHANGELOG.md  Cargo.toml
rtos_trace/: Cargo.toml  README.md
rtos_trace/src/: lib.rs  macros.rs  trace.rs
systemview_target/: Cargo.toml  README.md  build.rs
systemview_target/examples/: no_os.rs
systemview_target/lib/Config/: SEGGER_SYSVIEW_Conf.h
systemview_target/lib/SEGGER/: SEGGER_RTT.c  SEGGER_SYSVIEW_ConfDefaults.h
systemview_target/lib/SEGGER/Syscalls/: SEGGER_RTT_Syscalls_IAR.c  SEGGER_RTT_Syscalls_KEIL.c  SEGGER_RTT_Syscalls_SES.c
systemview_target/lib/impl/: systemview_conf_cortex_m.c
systemview_target/lib/patches/: 0001-external-rtt-channels.patch
systemview_target/src/: lib.rs  log.rs  macros.rs  stub.rs
