[package]
name = "systemview-target"
version = "0.3.0"
authors = ["Stefan Lüthi <stefan@luethi.tech>"]
edition = "2021"
license = "MIT"
categories = ["embedded", "no-std"]
keywords = ["embedded", "no_std", "cortex-m", "rtos"]
description = "RTOS tracing trait implementation for SEGGER SystemView."
documentation = "https://docs.rs/systemview-target"
repository = "https://gitlab.com/bern-rtos/tools/rtos-trace"
homepage = "https://bern-rtos.org"


[features]
default = ["cortex-m"]
callbacks-os = []
callbacks-os-time = []
callbacks-app = []
log = ["heapless", "dep:log"]
cortex-m = ["dep:cortex-m"]

# Let systemview use externally allocated RTT channels. The number defines the
# number of overall available RTT channels of which one must be pre-allocated
# without a buffer. See README.md for more details and safety considerations.
#
# Note: Upstream SystemView source code requires at least two channels to be
#       allocated (channel 0 being reserved for logging).
ext-rtt-channels-2 = ["_ext-rtt-channels"]
ext-rtt-channels-3 = ["_ext-rtt-channels"]
ext-rtt-channels-4 = ["_ext-rtt-channels"]
ext-rtt-channels-5 = ["_ext-rtt-channels"]
_ext-rtt-channels = []

[dependencies]
cty = "0.2"
rtos-trace = { version = "0.2", path = "../rtos_trace" }
heapless = { version = "0.8", optional = true }
log = { version = "0.4", optional = true }
cortex-m = { version = "0.7", optional = true }

[build-dependencies]
# default features must be disabled, because bindgen enables `std` in `log`
bindgen = { version = "0.72", default-features = false, features = ["runtime"] }
cc = "1.0"

[dev-dependencies]
#st-nucleo-f446 = { path = "../../platform/st_nucleo_f446" }
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "1.0.0"

[[example]]
name = "no_os"
required-features = ["callbacks-app"]

[package.metadata.docs.rs]
targets = ["thumbv7em-none-eabihf"]
features = ["cortex-m"]
